Fix backend deployment issues for Render
- Added fallback handling for missing Mapbox token in geocoding service
- Fixed geospatial service exports and module structure
- Updated TypeScript build to skip lib checks and continue on errors
- Backend will now start even without external API keys

AI Tool Usage: Augment Agent fixed deployment configuration and error handling

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "Backend API for Disaster Response Coordination Platform",
   "main": "src/server.ts",
   "scripts": {
-    "build": "tsc --noEmitOnError false || echo 'Build completed with warnings'",
+    "build": "tsc --noEmitOnError false --skipLibCheck true || echo 'Build completed with warnings'",
     "start": "npm run build && node dist/server.js",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "lint": "eslint . --ext .ts",
