--- a/package.json
+++ b/package.json
@@ -1,28 +1,42 @@
 {
+  "name": "disaster-frontend",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
+  },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
     "@mantine/core": "^8.1.1",
     "@mantine/dates": "^8.1.1",
     "@mantine/hooks": "^8.1.1",
     "@mantine/notifications": "^8.1.1",
-    "@mui/icons-material": "^7.1.2",
-    "@mui/material": "^7.1.2",
     "@tabler/icons-react": "^3.34.0",
-    "@tanstack/react-query": "^5.80.12",
+    "@tanstack/react-query": "^5.81.0",
     "axios": "^1.10.0",
-    "express-rate-limit": "^7.5.1",
-    "leaflet": "^1.9.4",
-    "mapbox-gl": "^3.13.0",
-    "react-leaflet": "^5.0.0",
-    "react-router-dom": "^7.6.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.26.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
-    "@types/leaflet": "^1.9.18",
+    "@emotion/babel-plugin": "^11.13.5",
+    "@emotion/react": "^11.14.0",
+    "@eslint/js": "^9.25.0",
     "@types/node": "^24.0.3",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@types/react-router-dom": "^5.3.3",
-    "@types/uuid": "^10.0.0"
+    "@vitejs/plugin-react": "^4.5.2",
+    "eslint": "^9.25.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^16.0.0",
+    "typescript": "~5.8.3",
+    "typescript-eslint": "^8.30.1",
+    "vite": "^6.3.5"
   }
 }
