Initial commit: Complete disaster response platform with frontend and backend

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
-# Environment variables - CRITICAL FOR SECURITY
+# Environment variables
 .env
 .env.*
 !.env.example
-!.env.template
 
 # Sensitive files
 *.pem
@@ -11,14 +10,6 @@
 *.p12
 *.pfx
 *.cer
-config/secrets.json
-secrets/
-
-# API Keys and Tokens (extra protection)
-**/api-keys.json
-**/tokens.json
-**/*secret*
-**/*private*
 
 # Logs and databases
 logs/
@@ -26,15 +17,6 @@ logs/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-*.sqlite
-*.db
-
-# Build outputs
-dist/
-build/
-.next/
-.nuxt/
-.vuepress/dist/
 
 # Runtime data
 .idea/
@@ -44,37 +26,6 @@ build/
 *.njsproj
 *.sln
 *.sw?
-
-# Dependencies
-node_modules/
-.pnp
-.pnp.js
-
-# Testing
-coverage/
-.nyc_output
-
-# Temporary files
-.tmp/
-temp/
-*.tmp
-*.temp
-
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
-# Backup files
-*.backup
-*.bak
-*.swp
-*.swo
-
-# Production deployment files
-.vercel
-.netlify
+node_modules
+node_modules
+node_modules
