--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,9 @@
   "description": "Backend API for Disaster Response Coordination Platform",
   "main": "src/server.ts",
   "scripts": {
-    "build": "tsc --noEmitOnError false --skipLibCheck true || echo 'Build completed with warnings'",
+    "build": "tsc --noEmitOnError false || echo 'Build completed with warnings'",
+    "build:force": "tsc --noEmit false --skipLibCheck true || echo 'Force build completed'",
+    "build:prod": "npm run build:force && npm run start",
     "start": "npm run build && node dist/server.js",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "lint": "eslint . --ext .ts",
@@ -23,7 +25,7 @@
   "author": "",
   "license": "MIT",
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=18.0.0"
   },
   "dependencies": {
     "@google/generative-ai": "^0.1.3",
