--- a/disaster-frontend/tsconfig.json
+++ b/disaster-frontend/tsconfig.json
@@ -11,11 +11,10 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "strict": false,
-    "noImplicitAny": false,
-    "strictFunctionTypes": false,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "noFallthroughCasesInSwitch": false,
+    "noImplicitAny": false,
+    "noFallthroughCasesInSwitch": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
