--- a/render.yaml
+++ b/render.yaml
@@ -1,47 +1,33 @@
 services:
-  # Backend API Service
   - type: web
     name: disaster-response-backend
     env: node
     plan: free
-    buildCommand: cd backend && npm install && npm run build
+    buildCommand: cd backend && npm ci && npm run build
     startCommand: cd backend && npm start
-    healthCheckPath: /api/health
     envVars:
       - key: NODE_ENV
         value: production
       - key: PORT
         value: 10000
       - key: SUPABASE_URL
-        sync: false
+        fromDatabase:
+          name: disaster-response-db
+          property: connectionString
       - key: SUPABASE_ANON_KEY
         sync: false
       - key: SUPABASE_SERVICE_ROLE_KEY
         sync: false
+      - key: JWT_SECRET
+        generateValue: true
       - key: GEMINI_API_KEY
         sync: false
       - key: MAPBOX_ACCESS_TOKEN
         sync: false
-      - key: JWT_SECRET
-        sync: false
-      - key: CORS_ORIGIN
-        value: https://disaster-response-frontend.onrender.com
-
-  # Frontend Static Site
-  - type: web
-    name: disaster-response-frontend
-    env: static
+    healthCheckPath: /api/health
+    
+databases:
+  - name: disaster-response-db
+    databaseName: disaster_response
+    user: disaster_user
     plan: free
-    buildCommand: cd disaster-frontend && npm install && npm run build
-    staticPublishPath: disaster-frontend/dist
-    envVars:
-      - key: VITE_API_URL
-        value: https://disaster-response-backend.onrender.com/api
-      - key: VITE_WEBSOCKET_URL
-        value: wss://disaster-response-backend.onrender.com
-      - key: VITE_SOCKET_URL
-        value: https://disaster-response-backend.onrender.com
-      - key: VITE_MAPBOX_ACCESS_TOKEN
-        sync: false
-      - key: VITE_GEMINI_API_KEY
-        sync: false
