--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,24 +1,19 @@
-# Backend Environment Variables Template
-# Copy this file to .env and fill in your actual values
-# NEVER commit the actual .env file to version control!
-
 # Server Configuration
 PORT=5000
 NODE_ENV=development
 
 # Supabase Configuration
-# Get these from your Supabase project dashboard
-SUPABASE_URL=https://your-project-id.supabase.co
-SUPABASE_ANON_KEY=your_supabase_anon_key_here
-SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key_here
+SUPABASE_URL=your_supabase_project_url
+SUPABASE_KEY=your_supabase_anon_key
+SUPABASE_SERVICE_KEY=your_supabase_service_role_key  # For admin operations
 
 # Google AI (Gemini) Configuration
-# Get from Google AI Studio: https://makersuite.google.com/app/apikey
-GEMINI_API_KEY=your_gemini_api_key_here
+# Required for location extraction and image verification
+GEMINI_API_KEY=your_gemini_api_key
 
 # Mapbox Configuration
-# Get from Mapbox account: https://account.mapbox.com/access-tokens/
-MAPBOX_ACCESS_TOKEN=pk.your_mapbox_public_token_here
+# Required for geocoding disaster locations
+MAPBOX_ACCESS_TOKEN=your_mapbox_access_token
 
 # Twitter API Configuration
 # Optional: Will use mock data if not provided
@@ -38,8 +33,7 @@ LOG_LEVEL=info  # Available levels: error, warn, info, debug
 WS_PATH=/api/socket.io/  # WebSocket endpoint path
 
 # Security Configuration
-# Generate a strong random string (64+ characters)
-JWT_SECRET=your_very_long_random_jwt_secret_here_minimum_64_characters
+JWT_SECRET=your_jwt_secret_key  # Use a strong random string
 JWT_EXPIRES_IN=7d  # Token expiration time
 
 # CORS Configuration
