--- a/disaster-frontend/.env.example
+++ b/disaster-frontend/.env.example
@@ -1,19 +1,13 @@
-# Frontend Environment Variables Template
-# Copy this file to .env and fill in your actual values
-# NEVER commit the actual .env file to version control!
+# API Configuration (Development)
+VITE_API_URL=http://localhost:5001
+VITE_WEBSOCKET_URL=ws://localhost:5001
 
-# API Configuration
-VITE_API_URL=http://localhost:5000/api
-VITE_WEBSOCKET_URL=ws://localhost:5000
-VITE_SOCKET_URL=http://localhost:5000
+# Production API Configuration (for Vercel deployment)
+# VITE_API_URL=https://your-render-backend.onrender.com
+# VITE_WEBSOCKET_URL=wss://your-render-backend.onrender.com
 
 # External Service API Keys
-# Get from Mapbox account: https://account.mapbox.com/access-tokens/
-# Use PUBLIC token (starts with pk.) for frontend
-VITE_MAPBOX_ACCESS_TOKEN=pk.your_mapbox_public_token_here
-
-# Get from Google AI Studio: https://makersuite.google.com/app/apikey
-# WARNING: This will be visible in the browser - consider using backend proxy instead
+VITE_MAPBOX_ACCESS_TOKEN=your_mapbox_access_token_here
 VITE_GEMINI_API_KEY=your_gemini_api_key_here
 
 # Feature flags
