--- a/disaster-frontend/package.json
+++ b/disaster-frontend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -17,21 +17,21 @@
     "@tabler/icons-react": "^3.34.0",
     "@tanstack/react-query": "^5.81.0",
     "axios": "^1.10.0",
-
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-
-    "react-router-dom": "^6.26.0",
+    "leaflet": "^1.9.4",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-leaflet": "^5.0.0",
+    "react-router-dom": "^7.6.2",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.13.5",
     "@emotion/react": "^11.14.0",
     "@eslint/js": "^9.25.0",
-
+    "@types/leaflet": "^1.9.18",
     "@types/node": "^24.0.3",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.5.2",
     "eslint": "^9.25.0",
