--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,10 @@
   "description": "Backend API for Disaster Response Coordination Platform",
   "main": "src/server.ts",
   "scripts": {
-    "build": "tsc --noEmitOnError false || echo 'Build completed with warnings'",
+    "build": "tsc --skipLibCheck --noEmitOnError false || echo 'Build completed with warnings'",
     "build:force": "tsc --noEmit false --skipLibCheck true || echo 'Force build completed'",
     "build:prod": "npm run build:force && npm run start",
-    "start": "npm run build && node dist/server.js",
+    "start": "npm run build:force && node dist/server.js",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "lint": "eslint . --ext .ts",
     "format": "prettier --write \"src/**/*.ts\"",
@@ -58,6 +58,7 @@
     "@types/mapbox__mapbox-sdk": "^0.16.3",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.0.3",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^5.0.0",
